modified code to work with new gene/allele core created using httpdatasource

--- a/WebContent/resources/css/searchAndFacet.css
+++ b/WebContent/resources/css/searchAndFacet.css
@@ -146,7 +146,9 @@ span.annotType {
 	font-weight: bold;	
 }
 
-table#gFacet td.geneSubtypeCount, 
+table#gFacet td.geneSubtypeCount,
+table#gFacet td.geneStatusCount,
+table#gFacet td.geneSubfacetCount,
 /*table#pipeline td[class^=procedure],*/ 
 table#pipeline td a.paramCount,
 table#mpFacet td.mpTopLevelCount,
