--- a/WebContent/resources/css/searchAndFacet.css
+++ b/WebContent/resources/css/searchAndFacet.css
@@ -106,10 +106,10 @@ table.facetTable td:nth-child(2){
 	text-align: right !important;
 }
 table#geneGrid th:nth-child(1) {
-	width: 45% !important;
+	width: 35% !important;
 }
 table#geneGrid th:nth-child(2) {
-	width: 35% !important;
+	width: 25% !important;
 }
 div.geneCol {
 	font-size: 12px;	
@@ -156,6 +156,21 @@ table#imgFacet td.imgExperimentCount
 /*table#mpFacet td.mpTopLevel*/ 
 /*table#maFacet td.maTopLevelCount, table#maFacet td.maTopLevel */{
 	cursor: pointer;	
+}
+table#gFacet tr.geneSubTypeTrCap {
+	cursor: pointer;
+}
+table#gFacet tr.geneSubTypeTrCap td {
+	padding-left: 15px !important;
+	background-image: url('../img/right.gif');
+    background-repeat: no-repeat;
+    background-position: 2px 50%; /*x,y*/	
+}
+table#gFacet tr.geneSubTypeTrCap td.unCollapse {
+	background-image: url('../img/down.gif');
+}
+table#gFacet tr.geneSubTypeTr {
+	display: none;
 }
 table#pipeline td[class^=procedure]:nth-child(1) {
 	padding-left: 5px;
@@ -259,14 +274,14 @@ div#saveTable {
 	padding: 1px 5px;
 	z-index: 99;	
 	background-color: #F4F4F4;
-	width: 105px;
+	width: 85px;
 }
 div#toolBox {
 	position: relative;
 	top: -30px;
 	right: 10px;	
 	height: 123px;
-	width: 192px;	
+	width: 200px;	
 	display: none;
 	padding: 15px;	
 	background-color: #F4F4F4;
@@ -287,9 +302,6 @@ div#exportSpinner {
 }
 /* end of table tool */
 
-div.dataTables_wrapper {
-	margin-top: 50px !important;
-}
 span.hiddenId {
 	display: none;
 }
