Unidimensional Graphs now appearing

--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -152,6 +152,7 @@ table#gFacet td.geneSubfacetCount,
 /*table#pipeline td[class^=procedure],*/ 
 table#pipeline td a.paramCount,
 table#mpFacet td.mpTopLevelCount,
+table#maFacet td.maTopLevelCount,
 table#imgFacet td.imgExperimentCount
 /*table#mpFacet td.mpTopLevel*/ 
 /*table#maFacet td.maTopLevelCount, table#maFacet td.maTopLevel */{
@@ -316,6 +317,7 @@ div.gridTitle, div#resultMsg, strong.lead {
 div.dataTables_wrapper {
 	margin-top: 30px;
 }
+
 /*
  * Table
  */
@@ -811,7 +813,8 @@ div.dataTables_length label {float: left; text-align: left;}
 div.dataTables_length select {width: 75px;}
 div.dataTables_filter label {float: right;}
 div.dataTables_info {padding-top: 8px;}
-div.dataTables_paginate {float: right;margin: 0; visibility:hidden;}
+div.dataTables_paginate {float: right;margin: 0;}
+div#phenotypesDiv div.dataTables_paginate {display: none !important;}
 table {margin-bottom: 6px !important;/* clear: both; */}
 .pagination-small {height: 26px;}
 .pagination-small ul li a {padding: 0 10px;line-height: 24px;}
@@ -986,3 +989,7 @@ body div#allele_tracker_panel_results  a img {
  .ui-state-hover {
 	background-color: #d57c24;
 } 
+
+.caption {
+    text-align:center;
+}
