--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -102,7 +102,7 @@ table.facetTable td {
     text-align: left;
     padding: 0;
 }
-table.facetTable td:nth-child(2){
+table.facetTable td:nth-child(3){
 	text-align: right !important;
 }
 table#geneGrid th:nth-child(1) {
@@ -152,11 +152,17 @@ table#gFacet td.geneSubfacetCount,
 /*table#pipeline td[class^=procedure],*/ 
 table#pipeline td a.paramCount,
 table#mpFacet td.mpTopLevelCount,
+table#maFacet td.maTopLevelCount,
 table#imgFacet td.imgExperimentCount
 /*table#mpFacet td.mpTopLevel*/ 
 /*table#maFacet td.maTopLevelCount, table#maFacet td.maTopLevel */{
 	cursor: pointer;	
 }
+
+tr.subFacet td:nth-child(2) {
+	padding-left: 5px !important;	
+}
+
 table#gFacet tr.geneSubTypeTrCap {
 	cursor: pointer;
 }
@@ -181,9 +187,7 @@ table#pipeline tr[class$=_param] {
 	color: gray;
 	cursor: text !important;
 }
-table.facetTable tr[class$=_sub] td:nth-child(1) {
-	padding-left: 15px;
-}
+
 img#maFacetInfo, img#mpFacetInfo {
 	float: right;	
 	margin: 0px 80px 10px 10px;		
@@ -316,6 +320,7 @@ div.gridTitle, div#resultMsg, strong.lead {
 div.dataTables_wrapper {
 	margin-top: 30px;
 }
+
 /*
  * Table
  */
@@ -644,6 +649,11 @@ Add custom css overrides here
   This file gets included as the last CSS import, so anything defined here 
   should override behavior defined previously
 */
+
+div.documentation a {
+	float: right;
+	margin-right: 15px;	
+}
 #examplesearches {
 	color:white;
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -811,7 +821,8 @@ div.dataTables_length label {float: left; text-align: left;}
 div.dataTables_length select {width: 75px;}
 div.dataTables_filter label {float: right;}
 div.dataTables_info {padding-top: 8px;}
-div.dataTables_paginate {float: right;margin: 0; visibility:hidden;}
+div.dataTables_paginate {float: right;margin: 0;}
+div#phenotypesDiv div.dataTables_paginate {display: none !important;}
 table {margin-bottom: 6px !important;/* clear: both; */}
 .pagination-small {height: 26px;}
 .pagination-small ul li a {padding: 0 10px;line-height: 24px;}
@@ -986,3 +997,8 @@ body div#allele_tracker_panel_results  a img {
  .ui-state-hover {
 	background-color: #d57c24;
 } 
+
+.caption {
+    text-align:center;
+    font-size:0.875em;
+}
