--- a/WebContent/resources/css/searchAndFacet.css
+++ b/WebContent/resources/css/searchAndFacet.css
@@ -147,16 +147,16 @@ span.annotType {
 	font-weight: bold;	
 }
 
-table#gFacet td.geneSubtypeCount,
-table#gFacet td.geneStatusCount,
-table#gFacet td.geneSubfacetCount,
-/*table#pipeline td[class^=procedure],*/ 
-table#pipeline td a.paramCount,
-table#mpFacet td.mpTopLevelCount,
-table#maFacet td.maTopLevelCount,
-table#imgFacet td.imgExperimentCount
-/*table#mpFacet td.mpTopLevel*/ 
-/*table#maFacet td.maTopLevelCount, table#maFacet td.maTopLevel */{
+table#geneFacetTbl td.geneSubtypeCount,
+table#geneFacetTbl td.geneStatusCount,
+table#geneFacetTbl td.geneSubfacetCount,
+/*table#pipelineFacetTbl td[class^=procedure],*/ 
+table#pipelineFacetTbl td a.paramCount,
+table#mpFacetTbl td.mpTopLevelCount,
+table#maFacetTbl td.maTopLevelCount,
+table#imagesFacetTbl td.imgSubfacetCount
+/*table#mpFacetTbl td.mpTopLevel*/ 
+/*table#maFacetTbl td.maTopLevelCount, table#maFacetTbl td.maTopLevel */{
 	cursor: pointer;	
 }
 
@@ -164,25 +164,25 @@ tr.subFacet td:nth-child(2) {
 	padding-left: 5px !important;	
 }
 
-table#gFacet tr.geneSubTypeTrCap {
+table#geneFacetTbl tr.geneSubTypeTrCap {
 	cursor: pointer;
 }
-table#gFacet tr.geneSubTypeTrCap td {
+table#geneFacetTbl tr.geneSubTypeTrCap td {
 	padding-left: 15px !important;
 	background-image: url('../img/right.gif');
     background-repeat: no-repeat;
     background-position: 2px 50%; /*x,y*/	
 }
-table#gFacet tr.geneSubTypeTrCap td.unCollapse {
+table#geneFacetTbl tr.geneSubTypeTrCap td.unCollapse {
 	background-image: url('../img/down.gif');
 }
-table#gFacet tr.geneSubTypeTr {
+table#geneFacetTbl tr.geneSubTypeTr {
 	display: none;
 }
-table#pipeline td[class^=procedure]:nth-child(1) {
+table#pipelineFacetTbl td[class^=procedure]:nth-child(1) {
 	padding-left: 5px;
 }
-table#pipeline tr[class$=_param] {
+table#pipelineFacetTbl tr[class$=_param] {
 	display: none;
 	font-size: 10px;
 	color: gray;
@@ -313,7 +313,7 @@ span.hiddenId {
 div.gridSubTitle {
 	display: inline;	
 }
-div.gridTitle, div#resultMsg, strong.lead {
+div#resultMsg, strong.lead {
 	color: gray !important;
 	font-weight: bold !important;
 	font-size: 13px !important;
@@ -360,7 +360,12 @@ ul#facetFilter li ul li {
 	list-style: none;
 	/*margin-left: 20px;*/	
 }
-
+ul#facetFilter li.has-sub {
+	display: none;
+}
+ul#facetFilter li.none {
+	display: block;
+}
 
 
 /* ----- end of  facet filter ----- */
