--- a/WebContent/resources/css/custom.css
+++ b/WebContent/resources/css/custom.css
@@ -109,6 +109,7 @@ table tr:last-child td{
    margin:10px;
 background-image: url('../img/down-arrow.png');
 background-repeat:no-repeat;
+vertical-align:middle;
 
 }
 
@@ -116,6 +117,7 @@ background-repeat:no-repeat;
    margin:10px;
 background-image: url('../img/up-arrow.png');
 background-repeat:no-repeat;
+vertical-align:middle;
 }
 
 div.gridTitle {
@@ -338,6 +340,7 @@ body div#allele_tracker_panel_results  a img {
 	color: black;
 	margin: 4px;
 	font-size: 14px;
+	vertical-align: middle;
 	}
 /*make the checkboxes have a reasonable spacing around them*/
 .ui-dropdownchecklist-item input[type=checkbox] {
