--- a/WebContent/resources/css/searchAndFacet.css
+++ b/WebContent/resources/css/searchAndFacet.css
@@ -167,7 +167,7 @@ tr.subFacet td:nth-child(2) {
 	padding-left: 5px !important;	
 }
 
-table#geneFacetTbl tr.geneSubTypeTrCap {
+table#geneFacetTbl tr.geneSubTypeTrCap,  table#imagesFacetTbl tr.facetSubCat {
 	cursor: pointer;
 }
 table#geneFacetTbl tr.geneSubTypeTrCap td, table#imagesFacetTbl tr.facetSubCat td{
