--- a/WebContent/resources/css/custom.css
+++ b/WebContent/resources/css/custom.css
@@ -341,7 +341,11 @@ body div#allele_tracker_panel_results  a img {
 	margin: 4px;
 	font-size: 14px;
 	vertical-align: middle;
+	min-width:225px;
 	}
+.ui-dropdownchecklist-selector{
+	min-width:245px;	
+}
 /*make the checkboxes have a reasonable spacing around them*/
 .ui-dropdownchecklist-item input[type=checkbox] {
 	margin: 4px 4px 4px;
@@ -354,6 +358,7 @@ div.ui-dropdownchecklist-dropcontainer {
 
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default{
 	background: white;
+	min-width:240px;	
 }
 	
  .ui-state-hover {
