--- a/WebContent/resources/css/searchAndFacet.css
+++ b/WebContent/resources/css/searchAndFacet.css
@@ -54,7 +54,14 @@ div#leftSideBar a {
 	text-decoration: none !important;	
 	color: #104E8B !important;
 }
-
+div.briefDocCap {
+	padding: 1px;
+	background-color: gray;
+	text-align: center;
+	margin-bottom:5px;	
+	color: white;
+	font-weight: bold;
+}
 div#facetBrowser {
 	margin: 5px;
 	color: gray;
