--- a/WebContent/resources/css/searchAndFacet.css
+++ b/WebContent/resources/css/searchAndFacet.css
@@ -173,10 +173,14 @@ table#diseaseFacetTbl td.diseaseSubfacetCount
 	cursor: pointer;	
 }
 
-tr.subFacet td:nth-child(2) {
-	padding-left: 5px !important;	
+tr.subFacet td:nth-child(1){
+	padding-left: 0px !important;	
+	border: 1px solid red;
 }
-
+tr.subFacet td:nth-child(2) {
+	color: red;
+	padding-left: 0px !important;	
+}
 table#geneFacetTbl tr.phenoCenterTrCap,
 table#geneFacetTbl tr.prodCenterTrCap,
 table#geneFacetTbl tr.geneSubTypeTrCap,
