--- a/WebContent/resources/css/custom.css
+++ b/WebContent/resources/css/custom.css
@@ -371,3 +371,8 @@ div.ui-dropdownchecklist-dropcontainer {
 }
 
 .filterTrigger { cursor: pointer; }
+
+.bigPercent {
+	font-size: 20px;
+	font-weight:bold;
+}
