deleted a copy paste error in custom.css that had some javascript in it!

--- a/WebContent/resources/css/custom.css
+++ b/WebContent/resources/css/custom.css
@@ -87,7 +87,7 @@ border-top: none !important;
 }
 table caption {
 	text-align: left;
-	font-size: 20px;<script type='text/javascript' src='${baseUrl}/js/utils/tools.js'></script>
+	font-size: 20px;
 	font-weight: bold;
 	color: #27408B;
 	padding-bottom: 10px; 
