--- a/WebContent/resources/css/searchPage.css
+++ b/WebContent/resources/css/searchPage.css
@@ -1,15 +1,17 @@
 
 /* ----- start of  facet filter ----- */
-div#filterToggle {
+div#filterToggle, div#resetFilter {
 	display: block;
+	font-size: 0.8em;	
+	cursor: pointer;
 }
 ul#facetFilter {
   width: auto;	
   margin: -23px 0 0 150px;
   padding: 3px 6px;
-  background: none;
+  background: #F0F0F0;
   border-radius: 1em;
-  font: normal 1em Arial, Helvetica, sans-serif;
+  font: normal 0.8em Arial, Helvetica, sans-serif;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
@@ -43,6 +45,13 @@ ul#facetFilter li.has-sub {
 ul#facetFilter li.none {
 	display: block;
 }
+ul#facetFilter li a {
+	text-decoration: none;
+	cursor: default;	
+}
+ul#facetFilter img {
+	cursor: pointer;
+}
 /* ----- end of  facet filter ----- */
 
 /* facet panel on search page */
@@ -50,7 +59,6 @@ table#mpFacetTbl td, table#maFacetTbl td{
 	margin:0;
 	padding:0;
 }
-
 table.facetTable td:nth-child(3) a {
 	text-decoration: none;
 	pointer: none;
@@ -58,11 +66,10 @@ table.facetTable td:nth-child(3) a {
 	font-size: 0.8em;
 	color: #666666;	
 }
-
-span.subcount {
-	float: right;
-	font-size: 0.8em;			
+td.grayout {
+	color: #BABABA;
 }
+
 /* end of facet panel on search page */
 
 
