Styled the table filters . This involved a lot of changes as all HTML was generated from js and most styling was in the HTML code.

--- a/WebContent/resources/css/additionalStyling.css
+++ b/WebContent/resources/css/additionalStyling.css
@@ -7,3 +7,16 @@ form.no-style{
 	border:none;
 	padding:none;
 }
+
+.filtersMoreLikeNicolas{
+	background: white;
+	padding: 0.5em; 
+	overflow-y: auto;
+	display: none;
+}
+.filtersMoreLikeNicolas.open{
+	display: block; 
+}
+.filtertype_add.open{
+	background:white;
+}
