--- a/WebContent/resources/css/default.css
+++ b/WebContent/resources/css/default.css
@@ -23,6 +23,9 @@ p.padleft               { padding-left: 1em; }
 a                       { color: #0978a1; text-decoration: underline; cursor: pointer; }
 a:hover                 { color: #0978a1; text-decoration: underline; }
 
+a.fa.fa-question-circle { color: #ccc; text-decoration: none; font-size: 2em; }
+a.fa.fa-question-circle:hover { color: #666; } 
+
 /* Headlines */
 h1 a,h2 a,h3 a,h4 a,h5 a,h6 a,h1,h2,h3,h4,h5,h6 { color: #333; margin-bottom: 0.5em; line-height: 1em; text-decoration: none; font-weight: 300; letter-spacing: -0.01em; }
 h1                      { font-size: 2.5em; letter-spacing: -1px; }
