--- a/WebContent/resources/css/searchPage.css
+++ b/WebContent/resources/css/searchPage.css
@@ -1,76 +1,80 @@
-
-/* ----- start of  facet filter ----- */
-div#filterToggle, div#resetFilter {
-	display: block;
-	font-size: 0.8em;	
-	cursor: pointer;
+/* New Facet Block without IDs */
+div.ffilter {
+	display: none; /*default, appears only when filter is added */
+	margin-bottom: 5px;
 }
-ul#facetFilter {
-  width: auto;	
-  margin: -23px 0 0 150px;
-  padding: 3px 6px;
-  background: #F0F0F0;
-  border-radius: 1em;
-  font: normal 0.8em Arial, Helvetica, sans-serif;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  display: block;
-}
-ul#facetFilter ul {
-  /*z-index: 9999;	
-  display: none;*/
-  margin: 0 0 5px 20px;
-  padding: 2px 5px;
-  width: auto;
-  /*position: absolute;
-  top: 20px;
-  left: 0;*/
-  /*background: #F4F4F4;*/ /*url(overlay.png) repeat-x 0 0;*/
-  /*border: solid 1px #b4b4b4;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;*/ 
-}
-#facetFilter li.has-sub {
-	list-style: none;
-}
-ul#facetFilter li ul li {	
-	list-style: none;
-	/*margin-left: 20px;*/	
-}
-ul#facetFilter li.has-sub {
-	display: none;
-}
-ul#facetFilter li.none {
-	display: block;
-}
-ul#facetFilter li a {
-	text-decoration: none;
-	cursor: default;	
-}
-ul#facetFilter img {
-	cursor: pointer;
-}
-/* ----- end of  facet filter ----- */
-
-/* facet panel on search page */
-table#mpFacetTbl td, table#maFacetTbl td{
-	margin:0;
-	padding:0;
-}
-table.facetTable td:nth-child(3) a {
-	text-decoration: none;
-	pointer: none;
+p.documentation a {
 	float: right;
-	font-size: 0.8em;
-	color: #666666;	
 }
-td.grayout {
-	color: #BABABA;
+div#facetSrchMsg {
+	margin-top: 10px;
+	width: 75%;	
 }
 
-/* end of facet panel on search page */
+/* facet - general */
+.fblock                                 { position: relative; }
+.region-sidebar-first .fblock .head     { background: #0978a1; color: #fff; }
+.region-sidebar-first .fblock .content  { background: none; }
+.flist li                               { cursor: pointer; }                         
+.fcount                                 { font-size: 11px; float: right; }
+
+/* facet - main categories */
+.fmcat > .flabel                        { color: #0978A1; font-size: 1.4em; font-weight: 300; }
+.fmcat                                  { margin: 1em 0; }
+.fmcat:before                           { font-family: 'FontAwesome'; content: "\f0da"; color: #0978A1; margin-right: 0.5em; }
+.fmcat.open:before                      { content: "\f0d7"; }
+.fmcat.open + .fmcat                    { margin-top: 2.5em; }
+.fmcat .fcat,
+.fmcat .fcatsection                     { display: none; }
+.fmcat.open .fcat,
+.fmcat.open .fcatsection                { display: block; }
+
+/* facet - categorie headlines */
+.fcatsection > .flabel                  { font-weight: 600; }
+.fcatsection:before                     { font-family: 'FontAwesome'; content: "\f0da"; margin-right: 0.5em; }
+.fcatsection.open:before                { content: "\f0d7"; }
+.fcatsection                            { margin-top: 0.7em; }
+.open .fcatsection .fcat,
+.fcatsection .fcat                      { display: none; }
+.fcatsection.open .fcat                 { display: block; }
+.fcatsection.inactive                   { color: #bbb; }
+
+/* facet - categories */
+li.fcat                                 { margin: 0; font-size: 0.9em; line-height: 1.3em; }
+.fcheckbox                              { margin: 0 0.5em 0 -1px; font-size: 0.9em; }
+
+/* highlight checked facet label */
+.highlight {
+	color: #D17023;
+} 
+
+
+/* active facet filter */
+ul#facetFilter > li                     { display: none; }       
+ul#facetFilter li.has-sub               { display: block; }
+ul#facetFilter li.has-sub + .has-sub    { margin-top: 1em; } 
+#resetFilter                            { opacity: 0.5; text-align: right; font-size: 11px; cursor: pointer; }
+#resetFilter:before                     { font-family: 'FontAwesome'; content: "\f00d"; margin-right: 0.3em; text-decoration: none; }
+#resetFilter:hover                      { opacity: 1; }
+.ftag {
+	padding: 2px;
+}
+.ftag a { 
+	display: block;
+	font-size: 11px; 
+	line-height: 1.1em; 
+	padding: 0 0.3em; 
+	text-decoration: none; 
+	color: #fff; 
+	background: #0978A1; 
+	border-radius: 3px; 
+	-webkit-border-radius: 3px; 
+	-moz-border-radius: 3px; 
+	-ms-border-radius: 3px;	 
+}
+.ftag a:before                          { font-family: 'FontAwesome'; content: "\f00d"; margin-right: 0.3em; }
+.ftag a:hover                           { background: #ddd; color: #666; }
+.ffilter                                { background: #f4f4f4; padding: 0.5em; border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; }
 
 
 /* dataTable on search page */
@@ -188,5 +192,6 @@ span#imgViewSwitcher {
 	cursor: pointer;
 }
 /* end of imgView/annotView switcher */
+
 
 
